Windows file dialogs: Use FOS_NOREADONLYRETURN only for mode AcceptSave.

Task-number: QTBUG-36886

Change-Id: I727abb92675187f15d1357b1df60f2fb609dc4d5
Reviewed-by: Andy Shaw <andy.shaw@digia.com>
Reviewed-by: Shawn Rutledge <shawn.rutledge@digia.com>

cregit: a0ebaca9cbffe11d9854d65157c9c2486451e298 https://github.com/qt/qtbase/commit/a0ebaca9cbffe11d9854d65157c9c2486451e298